# pattern_code

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: publish.yml
src/: lib.rs
